--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.6",
+    "@react-native-community/blur": "^3.6.0",
     "expo": "~45.0.0",
+    "expo-blur": "~11.1.0",
+    "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
+    "graphql": "^16.5.0",
+    "lottie-ios": "3.2.3",
+    "lottie-react-native": "^5.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-loading-spinner-overlay": "^3.0.0",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
